# csFiles

./: .gitmodules  CMakeLists.txt  README.md
csFiles/: CMakeLists.txt
csFiles/find/: CMakeLists.txt
csFiles/forms/: WFind.ui  WGrep.ui  WListEditor.ui  WMainWindow.ui
csFiles/include/: Pcre2Matcher.h  TextBuffer.h  WFileList.h  WListEditor.h  WMainWindow.h
csFiles/matching/: CMakeLists.txt
csFiles/matching/include/: IMatcher.h  Pcre2Matcher.h  TextBuffer.h
csFiles/matching/src/: IMatcher.cpp  IMatcherFactory.cpp  Pcre2Matcher.cpp  TextBuffer.cpp
csFiles/src/: Pcre2Matcher.cpp  WFileList.cpp  WFind.cpp  WListEditor.cpp  WMainWindow.cpp
csFiles/ui/: CMakeLists.txt
csFiles/ui/forms/: WFind.ui  WGrep.ui  WMainWindow.ui  WProgressLogger.ui
csFiles/ui/include/: FilesModel.h  ITabWidget.h  MatchJob.h  MatchResultsModel.h  Settings.h  WFileList.h  WFind.h  WGrep.h  WMainWindow.h  WProgressLogger.h
csFiles/ui/src/: FilesModel.cpp  MatchJob.cpp  MatchResultsModel.cpp  Settings.cpp  WFileList.cpp  WFind.cpp  WGrep.cpp  WMainWindow.cpp  WProgressLogger.cpp  main.cpp
